@@ -23,7 +23,9 @@ import slib.com.example.service.SeatService;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -36,9 +38,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
  * Testing Framework: JUnit 5, Mockito, MockMvc
  * Test Type: @WebMvcTest (Unit Tests only - no full context)
  */
-@WebMvcTest(value = SeatController.class, 
-    excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, 
-    classes = {slib.com.example.security.JwtAuthenticationFilter.class}))
+@WebMvcTest(value = SeatController.class, excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = {
+        slib.com.example.security.JwtAuthenticationFilter.class }))
 @Import(GlobalExceptionHandler.class)
 @AutoConfigureMockMvc(addFilters = false)
 @DisplayName("SeatController Unit Tests")
@@ -64,15 +65,15 @@ class SeatControllerUnitTest {
     @DisplayName("createSeat_validData_returns200WithCreatedSeat")
     void createSeat_validData_returns200WithCreatedSeat() throws Exception {
         // Arrange
-        SeatResponse request = createSeatResponse(null, 5, "A01", SeatStatus.AVAILABLE, 100, 150, 80, 60, 1, 1);
-        SeatResponse response = createSeatResponse(10, 5, "A01", SeatStatus.AVAILABLE, 100, 150, 80, 60, 1, 1);
+        SeatResponse request = createSeatResponse(null, 5, "A01", SeatStatus.AVAILABLE, 1, 1);
+        SeatResponse response = createSeatResponse(10, 5, "A01", SeatStatus.AVAILABLE, 1, 1);
 
         when(seatService.createSeat(any(SeatResponse.class))).thenReturn(response);
 
         // Act & Assert
         mockMvc.perform(post("/slib/seats")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.seatId").value(10))
                 .andExpect(jsonPath("$.seatCode").value("A01"))
@@ -86,8 +87,8 @@ class SeatControllerUnitTest {
     void createSeat_emptyRequestBody_returns400() throws Exception {
         // Act & Assert
         mockMvc.perform(post("/slib/seats")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(""))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(""))
                 .andExpect(status().isBadRequest());
 
         verify(seatService, never()).createSeat(any());
@@ -101,15 +102,15 @@ class SeatControllerUnitTest {
     @DisplayName("getSeats_withoutFilter_returns200WithAllSeats")
     void getSeats_withoutFilter_returns200WithAllSeats() throws Exception {
         // Arrange
-        SeatResponse seat1 = createSeatResponse(1, 2, "B01", SeatStatus.AVAILABLE, 50, 100, 80, 60, 1, 1);
-        SeatResponse seat2 = createSeatResponse(2, 3, "C02", SeatStatus.BOOKED, 150, 200, 80, 60, 2, 1);
+        SeatResponse seat1 = createSeatResponse(1, 2, "B01", SeatStatus.AVAILABLE, 1, 1);
+        SeatResponse seat2 = createSeatResponse(2, 3, "C02", SeatStatus.BOOKED, 2, 1);
         List<SeatResponse> seats = Arrays.asList(seat1, seat2);
 
         when(seatService.getAllSeats()).thenReturn(seats);
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats")
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$.length()").value(2))
@@ -125,16 +126,16 @@ class SeatControllerUnitTest {
     void getSeats_withZoneIdFilter_returns200WithFilteredSeats() throws Exception {
         // Arrange
         Integer zoneId = 10;
-        SeatResponse seat1 = createSeatResponse(3, zoneId, "D01", SeatStatus.AVAILABLE, 100, 100, 80, 60, 1, 2);
-        SeatResponse seat2 = createSeatResponse(4, zoneId, "D02", SeatStatus.AVAILABLE, 200, 100, 80, 60, 1, 3);
+        SeatResponse seat1 = createSeatResponse(3, zoneId, "D01", SeatStatus.AVAILABLE, 1, 2);
+        SeatResponse seat2 = createSeatResponse(4, zoneId, "D02", SeatStatus.AVAILABLE, 1, 3);
         List<SeatResponse> seats = Arrays.asList(seat1, seat2);
 
         when(seatService.getSeatsByZoneId(zoneId)).thenReturn(seats);
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats")
-                        .param("zoneId", zoneId.toString())
-                        .contentType(MediaType.APPLICATION_JSON))
+                .param("zoneId", zoneId.toString())
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$.length()").value(2))
@@ -154,13 +155,13 @@ class SeatControllerUnitTest {
     void getSeatById_validId_returns200WithSeat() throws Exception {
         // Arrange
         Integer seatId = 15;
-        SeatResponse seat = createSeatResponse(seatId, 7, "E05", SeatStatus.BOOKED, 300, 250, 80, 60, 3, 2);
+        SeatResponse seat = createSeatResponse(seatId, 7, "E05", SeatStatus.BOOKED, 3, 2);
 
         when(seatService.getSeatById(seatId)).thenReturn(seat);
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/{id}", seatId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.seatId").value(seatId))
                 .andExpect(jsonPath("$.seatCode").value("E05"))
@@ -179,90 +180,10 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/{id}", seatId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isInternalServerError());
 
         verify(seatService, times(1)).getSeatById(seatId);
-    }
-
-    // ===============================================
-    // === UPDATE SEAT POSITION ENDPOINT ===
-    // ===============================================
-
-    @Test
-    @DisplayName("updateSeatPosition_validData_returns200WithUpdatedPosition")
-    void updateSeatPosition_validData_returns200WithUpdatedPosition() throws Exception {
-        // Arrange
-        Integer seatId = 20;
-        SeatResponse request = createSeatResponse(null, null, null, null, 400, 500, null, null, null, null);
-        SeatResponse response = createSeatResponse(seatId, 5, "F01", SeatStatus.AVAILABLE, 400, 500, 80, 60, 2, 1);
-
-        when(seatService.updateSeatPosition(eq(seatId), any(SeatResponse.class))).thenReturn(response);
-
-        // Act & Assert
-        mockMvc.perform(put("/slib/seats/{id}/position", seatId)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.seatId").value(seatId))
-                .andExpect(jsonPath("$.positionX").value(400))
-                .andExpect(jsonPath("$.positionY").value(500));
-
-        verify(seatService, times(1)).updateSeatPosition(eq(seatId), any(SeatResponse.class));
-    }
-
-    // ================================================
-    // === UPDATE SEAT DIMENSIONS ENDPOINT ===
-    // ================================================
-
-    @Test
-    @DisplayName("updateSeatDimensions_validData_returns200WithUpdatedDimensions")
-    void updateSeatDimensions_validData_returns200WithUpdatedDimensions() throws Exception {
-        // Arrange
-        Integer seatId = 25;
-        SeatResponse request = createSeatResponse(null, null, null, null, null, null, 100, 80, null, null);
-        SeatResponse response = createSeatResponse(seatId, 8, "G03", SeatStatus.AVAILABLE, 200, 300, 100, 80, 1, 3);
-
-        when(seatService.updateSeatDimensions(eq(seatId), any(SeatResponse.class))).thenReturn(response);
-
-        // Act & Assert
-        mockMvc.perform(put("/slib/seats/{id}/dimensions", seatId)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.seatId").value(seatId))
-                .andExpect(jsonPath("$.width").value(100))
-                .andExpect(jsonPath("$.height").value(80));
-
-        verify(seatService, times(1)).updateSeatDimensions(eq(seatId), any(SeatResponse.class));
-    }
-
-    // ===========================================================
-    // === UPDATE SEAT POSITION AND DIMENSIONS ENDPOINT ===
-    // ===========================================================
-
-    @Test
-    @DisplayName("updateSeatPositionAndDimensions_validData_returns200")
-    void updateSeatPositionAndDimensions_validData_returns200() throws Exception {
-        // Arrange
-        Integer seatId = 30;
-        SeatResponse request = createSeatResponse(null, null, null, null, 350, 450, 90, 70, null, null);
-        SeatResponse response = createSeatResponse(seatId, 12, "H04", SeatStatus.AVAILABLE, 350, 450, 90, 70, 2, 4);
-
-        when(seatService.updateSeatPositionAndDimensions(eq(seatId), any(SeatResponse.class))).thenReturn(response);
-
-        // Act & Assert
-        mockMvc.perform(put("/slib/seats/{id}/position-and-dimensions", seatId)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.seatId").value(seatId))
-                .andExpect(jsonPath("$.positionX").value(350))
-                .andExpect(jsonPath("$.positionY").value(450))
-                .andExpect(jsonPath("$.width").value(90))
-                .andExpect(jsonPath("$.height").value(70));
-
-        verify(seatService, times(1)).updateSeatPositionAndDimensions(eq(seatId), any(SeatResponse.class));
     }
 
     // ========================================
@@ -274,19 +195,38 @@ class SeatControllerUnitTest {
     void updateSeat_validData_returns200WithUpdatedSeat() throws Exception {
         // Arrange
         Integer seatId = 35;
-        SeatResponse request = createSeatResponse(null, 9, "I05", SeatStatus.UNAVAILABLE, 250, 350, 85, 65, 3, 5);
-        SeatResponse response = createSeatResponse(seatId, 9, "I05", SeatStatus.UNAVAILABLE, 250, 350, 85, 65, 3, 5);
+        SeatResponse request = createSeatResponse(null, 9, "I05", SeatStatus.UNAVAILABLE, 3, 5);
+        SeatResponse response = createSeatResponse(seatId, 9, "I05", SeatStatus.UNAVAILABLE, 3, 5);
 
         when(seatService.updateSeat(eq(seatId), any(SeatResponse.class))).thenReturn(response);
 
         // Act & Assert
         mockMvc.perform(put("/slib/seats/{id}", seatId)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.seatId").value(seatId))
                 .andExpect(jsonPath("$.seatCode").value("I05"))
                 .andExpect(jsonPath("$.seatStatus").value("UNAVAILABLE"));
+
+        verify(seatService, times(1)).updateSeat(eq(seatId), any(SeatResponse.class));
+    }
+
+    @Test
+    @DisplayName("updateSeat_notFound_throwsRuntimeException")
+    void updateSeat_notFound_throwsRuntimeException() throws Exception {
+        // Arrange
+        Integer seatId = 999;
+        SeatResponse request = createSeatResponse(null, 9, "I05", SeatStatus.AVAILABLE, 3, 5);
+
+        when(seatService.updateSeat(eq(seatId), any(SeatResponse.class)))
+                .thenThrow(new RuntimeException("Seat not found"));
+
+        // Act & Assert
+        mockMvc.perform(put("/slib/seats/{id}", seatId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isInternalServerError());
 
         verify(seatService, times(1)).updateSeat(eq(seatId), any(SeatResponse.class));
     }
@@ -304,7 +244,7 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(delete("/slib/seats/{id}", seatId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").value("Deleted seat with id = " + seatId));
 
@@ -320,7 +260,7 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(delete("/slib/seats/{id}", seatId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isInternalServerError());
 
         verify(seatService, times(1)).deleteSeat(seatId);
@@ -341,7 +281,7 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/getAvailableSeat/{zoneId}", zoneId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").value(availableCount));
 
@@ -357,13 +297,8 @@ class SeatControllerUnitTest {
     void getAllSeats_validZoneId_returns200WithSeatDTOList() throws Exception {
         // Arrange
         Integer zoneId = 20;
-        SeatDTO dto1 = new SeatDTO();
-        dto1.setSeatId(1);
-        dto1.setSeatCode("J01");
-
-        SeatDTO dto2 = new SeatDTO();
-        dto2.setSeatId(2);
-        dto2.setSeatCode("J02");
+        SeatDTO dto1 = new SeatDTO(1, "J01", SeatStatus.AVAILABLE, 1, 1, zoneId);
+        SeatDTO dto2 = new SeatDTO(2, "J02", SeatStatus.BOOKED, 1, 2, zoneId);
 
         List<SeatDTO> seatDTOs = Arrays.asList(dto1, dto2);
 
@@ -371,10 +306,12 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/getAllSeat/{zoneId}", zoneId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2));
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].seatCode").value("J01"))
+                .andExpect(jsonPath("$[1].seatCode").value("J02"));
 
         verify(bookingService, times(1)).getAllSeatsDTO(zoneId);
     }
@@ -392,23 +329,24 @@ class SeatControllerUnitTest {
         LocalTime start = LocalTime.of(9, 0);
         LocalTime end = LocalTime.of(11, 0);
 
-        SeatDTO dto1 = new SeatDTO();
-        dto1.setSeatId(5);
-        dto1.setSeatCode("K01");
+        SeatDTO dto1 = new SeatDTO(5, "K01", SeatStatus.AVAILABLE, 1, 1, zoneId);
+        SeatDTO dto2 = new SeatDTO(6, "K02", SeatStatus.HOLDING, 1, 2, zoneId);
 
-        List<SeatDTO> seatDTOs = List.of(dto1);
+        List<SeatDTO> seatDTOs = Arrays.asList(dto1, dto2);
 
         when(bookingService.getSeatsByTime(zoneId, date, start, end)).thenReturn(seatDTOs);
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/getSeatsByTime/{zoneId}", zoneId)
-                        .param("date", date.toString())
-                        .param("start", start.toString())
-                        .param("end", end.toString())
-                        .contentType(MediaType.APPLICATION_JSON))
+                .param("date", date.toString())
+                .param("start", start.toString())
+                .param("end", end.toString())
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(1));
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].seatStatus").value("AVAILABLE"))
+                .andExpect(jsonPath("$[1].seatStatus").value("HOLDING"));
 
         verify(bookingService, times(1)).getSeatsByTime(zoneId, date, start, end);
     }
@@ -419,10 +357,10 @@ class SeatControllerUnitTest {
         // Arrange
         Integer zoneId = 25;
 
-        // Act & Assert
+        // Act & Assert - missing start and end params
         mockMvc.perform(get("/slib/seats/getSeatsByTime/{zoneId}", zoneId)
-                        .param("date", "2026-01-20")
-                        .contentType(MediaType.APPLICATION_JSON))
+                .param("date", "2026-01-20")
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest());
 
         verify(bookingService, never()).getSeatsByTime(any(), any(), any(), any());
@@ -440,13 +378,8 @@ class SeatControllerUnitTest {
         String dateString = "2026-01-25";
         LocalDate date = LocalDate.parse(dateString);
 
-        SeatDTO dto1 = new SeatDTO();
-        dto1.setSeatId(10);
-        dto1.setSeatCode("L01");
-
-        SeatDTO dto2 = new SeatDTO();
-        dto2.setSeatId(11);
-        dto2.setSeatCode("L02");
+        SeatDTO dto1 = new SeatDTO(10, "L01", SeatStatus.AVAILABLE, 1, 1, zoneId);
+        SeatDTO dto2 = new SeatDTO(11, "L02", SeatStatus.BOOKED, 1, 2, zoneId);
 
         List<SeatDTO> seatDTOs = Arrays.asList(dto1, dto2);
 
@@ -454,8 +387,8 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/getSeatsByDate/{zoneId}", zoneId)
-                        .param("date", dateString)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .param("date", dateString)
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$.length()").value(2));
@@ -471,10 +404,94 @@ class SeatControllerUnitTest {
 
         // Act & Assert
         mockMvc.perform(get("/slib/seats/getSeatsByDate/{zoneId}", zoneId)
-                        .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest());
 
         verify(bookingService, never()).getSeatsByDate(any(), any());
+    }
+
+    // =====================================================
+    // === GET ALL SEATS BY AREA ENDPOINT (NEW) ===
+    // =====================================================
+
+    @Test
+    @DisplayName("getAllSeatsByArea_validParameters_returns200WithMapOfSeats")
+    void getAllSeatsByArea_validParameters_returns200WithMapOfSeats() throws Exception {
+        // Arrange
+        Integer areaId = 1;
+        LocalDate date = LocalDate.of(2026, 1, 21);
+        LocalTime start = LocalTime.of(14, 0);
+        LocalTime end = LocalTime.of(15, 0);
+
+        // Zone 1 seats
+        SeatDTO seat1 = new SeatDTO(1, "A01", SeatStatus.AVAILABLE, 1, 1, 10);
+        SeatDTO seat2 = new SeatDTO(2, "A02", SeatStatus.HOLDING, 1, 2, 10);
+
+        // Zone 2 seats
+        SeatDTO seat3 = new SeatDTO(3, "B01", SeatStatus.BOOKED, 1, 1, 20);
+        SeatDTO seat4 = new SeatDTO(4, "B02", SeatStatus.AVAILABLE, 1, 2, 20);
+
+        Map<Integer, List<SeatDTO>> result = new HashMap<>();
+        result.put(10, Arrays.asList(seat1, seat2));
+        result.put(20, Arrays.asList(seat3, seat4));
+
+        when(bookingService.getAllSeatsByArea(areaId, date, start, end)).thenReturn(result);
+
+        // Act & Assert
+        mockMvc.perform(get("/slib/seats/area/{areaId}/all-seats", areaId)
+                .param("date", date.toString())
+                .param("start", start.toString())
+                .param("end", end.toString())
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.10").isArray())
+                .andExpect(jsonPath("$.10.length()").value(2))
+                .andExpect(jsonPath("$.10[0].seatCode").value("A01"))
+                .andExpect(jsonPath("$.10[1].seatStatus").value("HOLDING"))
+                .andExpect(jsonPath("$.20").isArray())
+                .andExpect(jsonPath("$.20.length()").value(2))
+                .andExpect(jsonPath("$.20[0].seatStatus").value("BOOKED"));
+
+        verify(bookingService, times(1)).getAllSeatsByArea(areaId, date, start, end);
+    }
+
+    @Test
+    @DisplayName("getAllSeatsByArea_missingParameters_returns400")
+    void getAllSeatsByArea_missingParameters_returns400() throws Exception {
+        // Arrange
+        Integer areaId = 1;
+
+        // Act & Assert - missing date, start, end params
+        mockMvc.perform(get("/slib/seats/area/{areaId}/all-seats", areaId)
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
+
+        verify(bookingService, never()).getAllSeatsByArea(any(), any(), any(), any());
+    }
+
+    @Test
+    @DisplayName("getAllSeatsByArea_emptyResult_returns200WithEmptyMap")
+    void getAllSeatsByArea_emptyResult_returns200WithEmptyMap() throws Exception {
+        // Arrange
+        Integer areaId = 999;
+        LocalDate date = LocalDate.of(2026, 1, 21);
+        LocalTime start = LocalTime.of(14, 0);
+        LocalTime end = LocalTime.of(15, 0);
+
+        Map<Integer, List<SeatDTO>> emptyResult = new HashMap<>();
+
+        when(bookingService.getAllSeatsByArea(areaId, date, start, end)).thenReturn(emptyResult);
+
+        // Act & Assert
+        mockMvc.perform(get("/slib/seats/area/{areaId}/all-seats", areaId)
+                .param("date", date.toString())
+                .param("start", start.toString())
+                .param("end", end.toString())
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$").isEmpty());
+
+        verify(bookingService, times(1)).getAllSeatsByArea(areaId, date, start, end);
     }
 
     // ==========================================
@@ -483,11 +500,11 @@ class SeatControllerUnitTest {
 
     /**
      * Helper method to create SeatResponse objects for testing
+     * SeatResponse fields: seatId, zoneId, seatCode, seatStatus, rowNumber,
+     * columnNumber
      */
     private SeatResponse createSeatResponse(Integer seatId, Integer zoneId, String seatCode,
-                                            SeatStatus seatStatus, Integer positionX, Integer positionY,
-                                            Integer width, Integer height, Integer rowNumber, Integer columnNumber) {
-        return new SeatResponse(seatId, zoneId, seatCode, seatStatus, positionX, positionY, 
-                               width, height, rowNumber, columnNumber);
+            SeatStatus seatStatus, Integer rowNumber, Integer columnNumber) {
+        return new SeatResponse(seatId, zoneId, seatCode, seatStatus, rowNumber, columnNumber);
     }
 }
